appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_pensum_item
- extendedWaitUntil:
    visible:
      id: pensum_screen
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    id: base_top_app_bar_action_search_pensum
- extendedWaitUntil:
    visible:
      id: subjects_search_screen
    timeout: 10000
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: subjects_search_screen
- tapOn:
    id: subjects_search_text_field
- inputText: "qa"
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- extendedWaitUntil:
    visible:
      id: subjects_search_result_QA
    timeout: 15000
- tapOn:
    id: subjects_search_result_QA
- extendedWaitUntil:
    visible:
      id: subjects_unavailable
    timeout: 30000
- tapOn:
    id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: subjects_search_screen
    timeout: 10000
