appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_summary_item
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 20000
- assertVisible:
    id: summary_profile_picture_container
- assertVisible:
    id: summary_profile_picture_edit_button
- tapOn:
    id: summary_profile_picture_edit_button
- extendedWaitUntil:
    visible:
      id: summary_profile_picture_pick_action
    timeout: 10000
- assertVisible:
    id: summary_profile_picture_take_action
- assertVisible:
    id: summary_profile_picture_remove_action
- tapOn:
    id: summary_profile_picture_remove_action
- extendedWaitUntil:
    visible:
      id: summary_remove_profile_picture_message
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_negative_button
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 10000
- tapOn:
    id: summary_profile_picture_edit_button
- extendedWaitUntil:
    visible:
      id: summary_profile_picture_remove_action
    timeout: 10000
- tapOn:
    id: summary_profile_picture_remove_action
- extendedWaitUntil:
    visible:
      id: summary_remove_profile_picture_message
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_positive_button
- extendedWaitUntil:
    visible:
      id: base_snackbar_container
    timeout: 15000
- assertVisible:
    id: summary_profile_picture_container
- tapOn:
    id: summary_profile_picture_edit_button
- extendedWaitUntil:
    visible:
      id: summary_profile_picture_pick_action
    timeout: 10000
- assertNotVisible:
    id: summary_profile_picture_remove_action
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - swipe:
          direction: DOWN
          duration: 600
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 10000
